--- a/index.html
+++ b/index.html
@@ -30,6 +30,91 @@
             max-width: 820px;
             padding: 32px 20px;
             text-align: center;
+            position: relative;
+            overflow: hidden;
+        }
+
+        /* Balloon Animation */
+        .balloon-container {
+            position: absolute;
+            left: 0; right: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            z-index: 0;
+        }
+
+        .balloon {
+            position: absolute;
+            bottom: -120px;
+            width: 60px;
+            height: 80px;
+            background: red;
+            border-radius: 30px 30px 30px 30px / 45px 45px 35px 35px;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+            animation: float 7s linear infinite;
+        }
+        .balloon:nth-child(2) {
+            left: 25%;
+            background: #FFD700;
+            animation-delay: 1s;
+        }
+        .balloon:nth-child(3) {
+            left: 50%;
+            background: #3aa86a;
+            animation-delay: 2.5s;
+        }
+        .balloon:nth-child(4) {
+            left: 70%;
+            background: #1e88e5;
+            animation-delay: 3.7s;
+        }
+        .balloon:nth-child(5) {
+            left: 15%;
+            background: #ff69b4;
+            animation-delay: 5s;
+        }
+        .balloon::after {
+            content: '';
+            display: block;
+            position: absolute;
+            left: 50%;
+            top: 78px;
+            width: 2px;
+            height: 28px;
+            background: #aaa;
+            transform: translateX(-50%);
+        }
+        .balloon::before {
+            content: '';
+            position: absolute;
+            left: 50%;
+            top: 74px;
+            width: 10px;
+            height: 10px;
+            background: inherit;
+            border-radius: 50%;
+            transform: translateX(-50%);
+            filter: blur(2px);
+            opacity: 0.7;
+        }
+
+        @keyframes float {
+            from {
+                transform: translateY(0) scale(1) rotate(-3deg);
+                opacity: 1;
+            }
+            40% {
+                transform: translateY(-40vh) scale(1.04) rotate(3deg);
+            }
+            70% {
+                opacity: 1;
+            }
+            to {
+                transform: translateY(-90vh) scale(0.95) rotate(-2deg);
+                opacity: 0.1;
+            }
         }
 
         .badge {
@@ -83,6 +168,15 @@
 </head>
 <body>
     <main class="container" role="main">
+        <!-- Balloon Animation Start -->
+        <div class="balloon-container" aria-hidden="true">
+            <div class="balloon" style="left:5%;"></div>
+            <div class="balloon"></div>
+            <div class="balloon"></div>
+            <div class="balloon"></div>
+            <div class="balloon"></div>
+        </div>
+        <!-- Balloon Animation End -->
         <div class="badge" aria-label="Family Trust">Piggy Warriors</div>
         <h1>Welcome</h1>
         <p class="lead">We love pigs.</p>
@@ -95,4 +189,3 @@
     </main>
 </body>
 </html>
-
